@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-20T01:22:19Z",
-  "count" : 23,
+  "timestamp" : "2024-07-03T01:24:23Z",
+  "count" : 22,
   "count_minmax" : [ 1, 23 ],
-  "count_decinc" : [ -0, +23 ],
-  "uniques" : 17,
+  "count_decinc" : [ -1, +23 ],
+  "uniques" : 16,
   "uniques_minmax" : [ 1, 17 ],
-  "uniques_decinc" : [ -0, +17 ]
+  "uniques_decinc" : [ -1, +17 ]
 }
