@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-07-01T12:39:03Z",
-  "count_outdated" : 8039,
-  "uniques_outdated" : 3547,
+  "timestamp" : "2024-07-03T01:24:23Z",
+  "count_outdated" : 8127,
+  "uniques_outdated" : 3595,
   "count" : 8213,
   "uniques" : 3656,
   "clones" : [
     {
-      "timestamp": "2024-06-18T00:00:00Z",
-      "count": 88,
-      "count_minmax": [ 1, 88 ],
-      "count_decinc": [ 0, 88 ],
-      "uniques": 48,
-      "uniques_minmax": [ 1, 48 ],
-      "uniques_decinc": [ 0, 48 ]
-    },
-    {
       "timestamp": "2024-06-19T00:00:00Z",
-      "count": 23,
+      "count": 22,
       "count_minmax": [ 1, 23 ],
-      "count_decinc": [ 0, 23 ],
-      "uniques": 17,
+      "count_decinc": [ 1, 23 ],
+      "uniques": 16,
       "uniques_minmax": [ 1, 17 ],
-      "uniques_decinc": [ 0, 17 ]
+      "uniques_decinc": [ 1, 17 ]
     },
     {
       "timestamp": "2024-06-20T00:00:00Z",
